--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -261,6 +261,7 @@
 .site-footer{
 	#block-menu-menu-footer-menu{
 		display: block;
+		margin-bottom: 7px;
 		li{
 			margin-bottom: 10px;
 			a{
@@ -315,9 +316,9 @@
     display: block;
     margin-top: -44px;
 	.breadcrumb{
-		background-color: inherit;
+		background-color: inherit !important;
 		span, a{
-			color: @color-white;
+			color: @color-white !important;
 		}
 	}
 }
@@ -435,4 +436,10 @@
 }
 /*END COUNTRY PROFILE*/
 
+/*PROMOTIONAL RESOURCES
+**************************/
+.promotional-introduction-item{
+	min-height: 475px;
+}
+/*END PROMOTIONAL RESOURCES*/
 }
