css changes - add news icon on movil 11:15 09-08-2016

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -10322,11 +10322,17 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
     z-index: 2;
   }
   .top-header .header-blocks .region-header-block #block-menu-block-5 {
-    display: none;
     position: absolute;
     bottom: 0px;
-    right: 0px;
+    right: 58px;
+    top: 5px;
     margin-right: 15px;
+  }
+  .top-header .header-blocks .region-header-block #block-menu-block-5 .introduction-image a {
+    background: url('../images/icons/004.png') no-repeat;
+    background-size: 21px;
+    width: 23px;
+    height: 23px;
   }
   .top-header .header-blocks .region-header-block #block-menu-block-5 .introduction-image img {
     width: 29px;
@@ -10371,7 +10377,7 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
     float: left;
     position: absolute;
     top: 0;
-    right: 63px;
+    right: 95px;
   }
   .top-header .header-blocks .region-header-block #block-lang-dropdown-language #lang-dropdown-select-language {
     width: auto !important;
