--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -34,14 +34,21 @@
 		z-index: 2;
 		.region-header-block{
 			#block-menu-block-5{
-				display: none;
 				position: absolute;
 				bottom: 0px;
-				right: 0px;
+				right: 58px;
+				top: 5px;
 				margin-right: 15px;
 				.introduction-image{
+					a{
+						background: url('../images/icons/004.png') no-repeat;
+    					background-size: 21px;
+    					width: 23px;
+    					height: 23px;
+					}
 					img{
 						width: 29px;
+						
 					}
 				}
 				.introduction-title{
@@ -88,7 +95,7 @@
 				float: left;
 				position: absolute;
 			    top: 0;
-			    right: 63px;
+			    right: 95px;
 
 				#lang-dropdown-select-language{
 					width: auto !important;
