Oira changes- some css issues for pc 14:44 09-08-2016

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1424,6 +1424,9 @@ a.more-link{
 							.field-name-title-field{
 								font-size: @font-size1-4;
 							}
+							.group-center.col-md-12{
+								clear: both;
+							}
 							.field-name-tools-see-more{
 								margin-left: 207px;
 								a.more-link{
@@ -2659,6 +2662,9 @@ div[id ^= "mini-panel-partner_in_country"]{
 							.col-sm-3{
 								padding-left: 0px;
 							}
+							.group-center.col-md-12{
+								clear: both;
+							}
 							.field-name-title-field{
 								font-size: @font-size1-4;
 							}
@@ -3191,6 +3197,9 @@ div[id ^= "mini-panel-partner_in_country"]{
 							margin-left: 0px;
 							.col-sm-3{
 								padding-left: 0px;
+							}
+							.group-center.col-md-12{
+								clear: both;
 							}
 							.field-name-title-field{
 								
