--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -8073,6 +8073,9 @@ a.more-link:before {
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-title-field {
   font-size: 1.4em;
 }
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .group-center.col-md-12 {
+  clear: both;
+}
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-tools-see-more {
   margin-left: 207px;
 }
@@ -9153,6 +9156,9 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
 .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .col-sm-3 {
   padding-left: 0px;
 }
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .group-center.col-md-12 {
+  clear: both;
+}
 .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .field-name-title-field {
   font-size: 1.4em;
 }
@@ -9659,6 +9665,9 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
 }
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .col-sm-3 {
   padding-left: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .group-center.col-md-12 {
+  clear: both;
 }
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-title-field h3,
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-title-field h2 {
