--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
@@ -55,4 +55,47 @@
 
 /*END HOME*/
 
+/*OIRA TOOLS
+**************************************/
+.page-oira-tools{
+	#hwc-practical-tool-menu-tools-form{
+		div:first-child {
+			#edit-content {
+				.search-page-results-wrapper {
+					.node-practical-tool {
+						.field-name-tools-see-more {
+    						margin-left: 170px !important;
+    					}
+    				}
+    			}
+    		}
+    	}
+	}
+}
+/*END OIRA TOOLS*/
+
+/*PROMOTIONAL RESOURCES
+***************************************************/
+.page-promotional-resources-search{
+	.panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last{
+    	#oira-promotional-material-search-form {
+    		div:first-child{ 
+    			#edit-content{ 
+    				.search-page-results-wrapper{
+    					.node-promotional-material{
+    						.field-name-tools-see-more{
+    							a.more-link{
+									margin-left: 156px !important;
+    							}
+    						}
+    					}
+    				}
+    			}
+    		}
+    	}
+	}
+}
+/*END PROMOTIONAL RESOURCES*/
+
+
 }
