--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -118,5 +118,17 @@
 	}
 }
 
+/*HOME
+***************************************/
+.front{
+	.views-view-grid.cols-3 .row > :nth-child(3){
+		display: block;
+	}
+}
+/*END HOME*/
+
+
+
+
 
 }
