--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
@@ -66,6 +66,9 @@
 						.field-name-tools-see-more {
     						margin-left: 170px !important;
     					}
+    					.related-partners-1 > div{
+							margin-left: 184px !important;
+						}
     				}
     			}
     		}
@@ -88,6 +91,9 @@
 									margin-left: 156px !important;
     							}
     						}
+    						.related-partners-1 > div{
+								margin-left: 170px !important;
+							}
     					}
     				}
     			}
@@ -96,6 +102,30 @@
 	}
 }
 /*END PROMOTIONAL RESOURCES*/
+
+/* QUICKTABS FOR COUNTRY DETAIL AND PARTNER DETAIL
+***********************************************************/
+div[id*="quicktabs-container-view__country_partner_content__block"]{
+	.quicktabs-tabpage{
+		.node-practical-tool, .node-promotional-material{
+			.field-name-tools-see-more{
+				margin-left: 258px !important;
+			}
+			.related-partners-1 > div{
+				margin-left: 273px !important;
+			}
+		}
+		.node-promotional-material{
+			.field-name-tools-see-more{
+				margin-left: 243px !important;
+			}
+			.related-partners-1 > div{
+				margin-left: 258px !important;
+			}
+		}
+	}
+}
+/*END QUICKTABS FOR COUNTRY DETAIL AND PARTNER DETAIL*/
 
 
 }
