--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -365,7 +365,7 @@
 			margin-top: 0px;
 		}
 	}
-	.views-view-grid.cols-3 .row > :nth-child(3){
+	.views-view-grid.cols-3 > .row > div:nth-child(3){
 		display: none;
 	}
 }
@@ -564,6 +564,9 @@
 						.field-name-tools-see-more {
     						margin-left: 180px !important;
     					}
+    					.related-partners-1 > div{
+							margin-left: 195px !important;
+						}
     				}
     			}
     		}
@@ -589,6 +592,9 @@
 									margin-left: 166px !important;
     							}
     						}
+    						.related-partners-1 > div{
+								margin-left: 180px !important;
+							}
     					}
     				}
     			}
@@ -619,10 +625,25 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 			.field-name-tools-see-more{
 				margin-left: 203px !important;
 			}
+			.related-partners-1 > div{
+				margin-left: 218px !important;
+			}
+			.group-center{
+				display: inline-block;
+				width: 100%;
+			}
 		}
 		.quicktabs-views-group{
 			.field-name-related-partners{
 				clear: both;
+			}
+		}
+		.node-promotional-material{
+			.field-name-tools-see-more{
+				margin-left: 190px !important;
+			}
+			.related-partners-1 > div{
+				margin-left: 203px !important;
 			}
 		}
 	}
