--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -2276,7 +2276,7 @@ div[id ^= "mini-panel-partner_in_country"]{
 				margin-left: 310px;
 			}
 			.related-partners-1 > div{
-				margin-left: 323px !important;
+				margin-left: 323px; //!important testing
 			}
 		}
 		.node-promotional-material{
@@ -2284,7 +2284,7 @@ div[id ^= "mini-panel-partner_in_country"]{
 				margin-left: 293px;
 			}
 			.related-partners-1 > div{
-				margin-left: 309px !important;
+				margin-left: 309px; //!important testing
 			}
 		}
 	}
@@ -3241,6 +3241,7 @@ div[id ^= "mini-panel-partner_in_country"]{
 							span.custom-field-node-type{
 								font-style: italic;
 								color: @color-primary-dark;
+								display: block;
 							}
 							.field-name-field-publication-date{
 								margin-top: 0px;
