--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -10338,7 +10338,7 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
     width: 715px;
     margin: 25px auto;
   }
-  .page-what-is-new .panels-flexible-row-new-6 .panels-flexible-region-new-new_tools .view-id-tools .views-view-grid.cols-3 .row > :nth-child(3) {
+  .page-what-is-new .panels-flexible-row-new-6 .panels-flexible-region-new-new_tools .view-id-tools .views-view-grid.cols-3 > .row > div:nth-child(3) {
     display: none;
   }
   .page-what-is-new .panels-flexible-row-new-6 .panels-flexible-region-new-new_tools .view-id-tools .views-item-columns-container {
@@ -10427,7 +10427,9 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
     z-index: 1;
     padding-left: 30px;
     margin-left: 15px;
-    margin-top: 30px;
+    margin-top: 20px;
+    padding-bottom: 15px !important;
+    display: none;
   }
   .page-oira-tools .panels-flexible-row-new-1 #edit-left-column > a,
   .page-promotional-resources-search .panels-flexible-row-new-1 #edit-left-column > a,
@@ -10452,6 +10454,51 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
     left: 305px;
     right: inherit;
   }
+  .page-oira-tools .panels-flexible-row-new-1 #edit-left-column .toggle-search-sidebar,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #edit-left-column .toggle-search-sidebar,
+  .page-search-site .panels-flexible-row-new-1 #edit-left-column .toggle-search-sidebar,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-left-column .toggle-search-sidebar,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-left-column .toggle-search-sidebar,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-left-column .toggle-search-sidebar,
+  .page-oira-tools .oira-search-form-container #edit-left-column .toggle-search-sidebar,
+  .page-promotional-resources-search .oira-search-form-container #edit-left-column .toggle-search-sidebar,
+  .page-search-site .oira-search-form-container #edit-left-column .toggle-search-sidebar {
+    display: block !important;
+  }
+  .page-oira-tools .panels-flexible-row-new-1 #edit-left-column .toggle-search-sidebar span,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #edit-left-column .toggle-search-sidebar span,
+  .page-search-site .panels-flexible-row-new-1 #edit-left-column .toggle-search-sidebar span,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-left-column .toggle-search-sidebar span,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-left-column .toggle-search-sidebar span,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-left-column .toggle-search-sidebar span,
+  .page-oira-tools .oira-search-form-container #edit-left-column .toggle-search-sidebar span,
+  .page-promotional-resources-search .oira-search-form-container #edit-left-column .toggle-search-sidebar span,
+  .page-search-site .oira-search-form-container #edit-left-column .toggle-search-sidebar span {
+    height: 20px;
+    width: 20px;
+    overflow: hidden;
+    display: block;
+    float: right;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+  .page-oira-tools .panels-flexible-row-new-1 #edit-left-column .toggle-search-sidebar span:before,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #edit-left-column .toggle-search-sidebar span:before,
+  .page-search-site .panels-flexible-row-new-1 #edit-left-column .toggle-search-sidebar span:before,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-left-column .toggle-search-sidebar span:before,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-left-column .toggle-search-sidebar span:before,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-left-column .toggle-search-sidebar span:before,
+  .page-oira-tools .oira-search-form-container #edit-left-column .toggle-search-sidebar span:before,
+  .page-promotional-resources-search .oira-search-form-container #edit-left-column .toggle-search-sidebar span:before,
+  .page-search-site .oira-search-form-container #edit-left-column .toggle-search-sidebar span:before {
+    content: "\e253";
+    font-family: "Glyphicons Halflings";
+    font-size: 1.2em;
+    color: #ffffff;
+    margin-left: 0px;
+    margin-right: 20px;
+    line-height: 0px;
+  }
   .page-oira-tools .panels-flexible-row-new-1 #edit-content,
   .page-promotional-resources-search .panels-flexible-row-new-1 #edit-content,
   .page-search-site .panels-flexible-row-new-1 #edit-content,
@@ -10464,6 +10511,52 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
     padding-left: 15px !important;
     border-left: 0px !important;
     padding-bottom: 40px !important;
+    padding-top: 80px !important;
+  }
+  .page-oira-tools .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar,
+  .page-search-site .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-content .toggle-search-sidebar,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-content .toggle-search-sidebar,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-content .toggle-search-sidebar,
+  .page-oira-tools .oira-search-form-container #edit-content .toggle-search-sidebar,
+  .page-promotional-resources-search .oira-search-form-container #edit-content .toggle-search-sidebar,
+  .page-search-site .oira-search-form-container #edit-content .toggle-search-sidebar {
+    position: absolute;
+    top: 20px;
+  }
+  .page-oira-tools .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar span,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar span,
+  .page-search-site .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar span,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-content .toggle-search-sidebar span,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-content .toggle-search-sidebar span,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-content .toggle-search-sidebar span,
+  .page-oira-tools .oira-search-form-container #edit-content .toggle-search-sidebar span,
+  .page-promotional-resources-search .oira-search-form-container #edit-content .toggle-search-sidebar span,
+  .page-search-site .oira-search-form-container #edit-content .toggle-search-sidebar span {
+    height: 40px;
+    width: 40px;
+    overflow: hidden;
+    background-color: #786586;
+    display: block;
+    cursor: pointer;
+  }
+  .page-oira-tools .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar span:before,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar span:before,
+  .page-search-site .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar span:before,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-content .toggle-search-sidebar span:before,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-content .toggle-search-sidebar span:before,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #edit-content .toggle-search-sidebar span:before,
+  .page-oira-tools .oira-search-form-container #edit-content .toggle-search-sidebar span:before,
+  .page-promotional-resources-search .oira-search-form-container #edit-content .toggle-search-sidebar span:before,
+  .page-search-site .oira-search-form-container #edit-content .toggle-search-sidebar span:before {
+    content: "\e003";
+    font-family: "Glyphicons Halflings";
+    font-size: 1.3em;
+    color: #ffffff;
+    margin-left: 10px;
+    margin-right: 20px;
+    line-height: 40px;
   }
   /*END OIRA TOOLS, PROMOTIONAL RESOURCES, GENERAL SEARCH (FILTERS)*/
   /*OIRA TOOLS
