--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -878,6 +878,7 @@
 @font-size0-9: 0.9em;
 @font-size1: 1em;
 @font-size1-2: 1.2em;
+@font-size1-3: 1.3em;
 @font-size1-4: 1.4em;
 @font-size1-6: 1.6em;
 @font-size1-7: 1.7em;
